--- a/CSS/practiceCSS.css
+++ b/CSS/practiceCSS.css
@@ -21,3 +21,21 @@
   font-weight: bold;
   flex: 1;
 }
+.grid {
+  width: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px 0;
+  padding: 10px;
+  justify-items: center;
+  align-items: center;
+}
+.grid img {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+}
+
+.header {
+  
+}
