--- a/CSS/practiceCSS.css
+++ b/CSS/practiceCSS.css
@@ -5,6 +5,7 @@
   padding: 10px;
   border: 1px solid black;
 }
+
 .navigation {
   height: 64px;
   border-bottom: 1px solid rgb(231, 231, 231);
@@ -21,6 +22,7 @@
   font-weight: bold;
   flex: 1;
 }
+
 .grid {
   width: 400px;
   display: grid;
@@ -37,5 +39,62 @@
 }
 
 .header {
-  
+  height: 120px;
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+h2 {
+  margin-left: 20px;
+}
+p {
+  margin-left: 20px;
+}
+#title {
+  color: white;
+}
+#code {
+  color: white;
+}
+li {
+  border-bottom: 1px solid black;
+  padding: 5px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+@media screen and (min-width: 720px) {
+  .samsung {
+    display: flex;
+  }
+  section[title="rank"] {
+    width: 700px;
+    flex-wrap: wrap;
+  }
+}
+
+.comment-list {
+  line-height: 1.5;
+}
+.comment-title {
+  display: flex;
+  align-items: center;
+  font-size: 28px;
+  font-weight: bold;
+  border-bottom: 2px solid black;
+  margin: auto 10px;
+}
+.comment-title p:last-child {
+  color: #06a27d;
+}
+.comment-container {
+  border-bottom: 1px solid #939393;
+  box-sizing: border-box;
+  padding: 18px 20px;
+  word-break: keep-all;
+}
+.comment-container p:nth-child(2) {
+  color: #939393;
+  margin-bottom: 30px;
 }
